<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.BookSlotFragment">

    <TextView
        android:id="@+id/tvChoosetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLabel"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13406293" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driveNOLabel"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tvChooseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLabel"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/etDriveLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/driveLicenceHint"
        android:inputType="textPersonName"
        android:textAlignment="inherit"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/dateHint"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHighlight="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/tvChooseDate"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvChooseDate" />

    <Spinner
        android:id="@+id/spinnerTimeSelector"
        android:layout_width="219dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvChoosetime"
        app:layout_constraintStart_toEndOf="@+id/tvChoosetime"
        app:layout_constraintTop_toTopOf="@+id/tvChoosetime" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>